# systems-engineering-traceability-lab

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: components.json  interfaces.json  portfolio_projects.json  risks.json  stakeholder_requirements.json  subsystem_requirements.json  system_requirements.json  verification_tests.json
docs/: README.md  portfolio_ideas.md  project_plan.md  system_concept.md  verification_strategy.md
reports/: audit-summary.md  interface-register.csv  portfolio-roadmap.md  risk-register.csv  traceability-matrix.csv
src/se_traceability_lab/: __init__.py  audit.py  cli.py  data.py  reporting.py  roadmap.py
tests/: test_audit.py  test_roadmap.py
