[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "systems-engineering-traceability-lab"
version = "0.1.0"
description = "A portfolio-ready systems engineering repository focused on requirements traceability, interfaces, risks, and verification."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name = "Akif" }
]
keywords = [
  "systems-engineering",
  "requirements",
  "traceability",
  "verification",
  "portfolio"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
se-trace-lab = "se_traceability_lab.cli:run"

[tool.setuptools.packages.find]
where = ["src"]

